--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
            <span class="text-white text-lg "> Kamrul emon</span>
         </div>
         <div class="flex-none gap-2">
-           <!-- Navigation menu is here -->
-             <div class=" text-white text-lg">
+ <!-- Navigation menu is here -->
 
-                <ul class="flex ">
+
+           <!-- Responsive section -->
+             <div class=" text-white text-lg">
+           <!-- Responsive section -->
+
+
+                <ul class="hidden  lg:flex ">
                     <li class="mr-11">
                         <span><i class="fa-sharp fa-solid fa-house"></i></span>
                         <span>Home</span>
@@ -53,20 +58,30 @@
 
              </div>
 
+                        <!-- Responsive section -->
+                        <div class="dropdown dropdown-end lg:hidden">
+                       <!-- Responsive section -->
 
-            <div class="dropdown dropdown-end">
+
                 <label tabindex="0" class="btn btn-ghost btn-circle avatar">
                     <i class="fa-sharp fa-solid fa-bars text-white"></i>
                 </label>
                 <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
                     <li>
-                        <a class="justify-between">
-                            Profile
-                            <span class="badge">New</span>
-                        </a>
+                        <span><i class="fa-sharp fa-solid fa-house"></i></span>
+                        <span>Home</span>  
                     </li>
-                    <li><a>Settings</a></li>
-                    <li><a>Logout</a></li>
+
+                    <li>
+                        <span><i class="fa-solid fa-heart"></i> </span>
+                        <span>Wishlist</span>
+                    </li>
+
+                    <li>
+                        <span><i class="fa-solid fa-trash"></i> </span>
+                        <span> Recycle Bin</span> 
+                    </li>
+                    
                 </ul>
             </div>
         </div>
